changes with nav

--- a/accountsettings.html
+++ b/accountsettings.html
@@ -75,11 +75,11 @@
 				<div class="menu-ctn">
 					<p class="menu-title">MENU</p>
 					<ul class="menus">
-					<a href="dashboard.html"><li  class="menu-items" href="dashboard2.html">Dashboard</li></a>
+					<a href="/"><li  class="menu-items" href="dashboard2.html">Dashboard</li></a>
 						<a href="contest.html"><li class="menu-items">Contest</li></a>
 						<a href="users.html"><li class="menu-items">Users</li></a>
 						<a href="Adverts.html"><li class="menu-items">Adverts</li></a>
-						<a href="contactsprice.html"><li class="menu-items">Contacts Price</li></a>
+						<a href="coinspricing.html"><li class="menu-items">Coins Pricing</li></a>
 						<a href="accountsettings.html"><li class="menu-items">Account Settings</li></a>
 					</ul>
 				</div>
