--- a/dashboard2.html
+++ b/dashboard2.html
@@ -30,7 +30,7 @@
 					
 					<div class="second-rec">
                         <div class="arrow-div">
-                            <a href="dashboard.html"><img src="icons/Arrow - Left Circle.png" width="20px" height="20px"></a>
+                            <a href="/"><img src="icons/Arrow - Left Circle.png" width="20px" height="20px"></a>
                             <p>Back</p>
                         </div>
                         <div class="section-div">
@@ -139,11 +139,10 @@
 				<div class="menu-ctn">
 					<p class="menu-title">MENU</p>
 					<ul class="menus">
-						<a href="dashboard.html"><li  class="menu-items" href="dashboard2.html">Dashboard</li></a>
+						<a href="/"><li  class="menu-items" href="dashboard2.html">Dashboard</li></a>
 						<a href="contest.html"><li class="menu-items">Contest</li></a>
 						<a href="users.html"><li class="menu-items">Users</li></a>
-						<a href="Adverts.html"><li class="menu-items">Adverts</li></a>
-						<a href="contactsprice.html"><li class="menu-items">Contacts Price</li></a>
+						<a href="Adverts.html"><li class="menu-items">AdverCoins Pricing</li></a>
 						<a href="accountsettings.html"><li class="menu-items">Account Settings</li></a>
 					</ul>
 				</div>
