media query changes

--- a/coinspricing.html
+++ b/coinspricing.html
@@ -27,12 +27,9 @@
 				</div>
 				<div class="inner-ctn">
 					<div class="second-rec">
-						<form>
-							<div class="text-wrapper">
+						<div class="input-div">
+							<div class="search_section">
 								<p>what are you looking for ?</p>
-								<p>Date Created</p>
-							</div>
-							<div class="input-div">
 								<div class="search-div">
 									<img
 										class="search-img"
@@ -46,26 +43,33 @@
 										placeholder="Search..."
 									/>
 								</div>
-								<input
-									placeholder="From Date"
-									class="date"
-									type="text"
-									onfocus="(this.type='date')"
-									id="date"
-								/>
-								<input
-									placeholder="To Date "
-									class="date"
-									type="text"
-									onfocus="(this.type='date')"
-									id="date"
-								/>
+							</div>
+							<div class="date_section">
+								<p>Date Created</p>
+								<div class="date_ctn">
+									<input
+										placeholder="From Date"
+										class="date"
+										type="text"
+										onfocus="(this.type='date')"
+										id="date"
+									/>
+									<input
+										placeholder="To Date "
+										class="date"
+										type="text"
+										onfocus="(this.type='date')"
+										id="date"
+									/>
+								</div>
+							</div>
+							<div class="input_btn">
 								<button class="refine-search">
 									Refine Search
 								</button>
 								<p class="clear">Clear Filters</p>
 							</div>
-						</form>
+						</div>
 					</div>
 					<div class="big-rec">
 						<table>
@@ -225,7 +229,7 @@
 						<a href="Adverts.html"
 							><li class="menu-items">Adverts</li></a
 						>
-						<a href="contactsprice.html"
+						<a href="coinspricing.html"
 							><li class="menu-items">Coins Pricing</li></a
 						>
 						<a href="accountsettings.html"
