--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 								src="icons/Arrow - Down 2.svg"
 							/>
 						</div>
+						<img class="menu-icon" src="icons/menu icon.png" />
 					</div>
 				</div>
 				<div class="inner-ctn">
@@ -44,6 +45,25 @@
 								<p>Total Winners</p>
 								<h2>200</h2>
 							</div>
+							<div class="arrow">
+								<svg
+									width="30"
+									height="30"
+									viewBox="0 0 18 18"
+									fill="none"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<path
+										opacity="0.4"
+										d="M8.99984 0.666494C13.5957 0.666494 17.3332 4.40483 17.3332 8.99983C17.3332 13.5948 13.5957 17.3332 8.99984 17.3332C4.40484 17.3332 0.666504 13.5948 0.666504 8.99983C0.666504 4.40483 4.40484 0.666494 8.99984 0.666494Z"
+										fill="#75759E"
+									/>
+									<path
+										d="M7.79782 5.48256C7.95699 5.48256 8.11699 5.5434 8.23865 5.66506L11.1445 8.55673C11.262 8.67423 11.3278 8.8334 11.3278 9.00006C11.3278 9.1659 11.262 9.32506 11.1445 9.44256L8.23865 12.3359C7.99449 12.5792 7.59949 12.5792 7.35532 12.3342C7.11199 12.0892 7.11282 11.6934 7.35699 11.4501L9.81782 9.00006L7.35699 6.55006C7.11282 6.30673 7.11199 5.91173 7.35532 5.66673C7.47699 5.5434 7.63782 5.48256 7.79782 5.48256Z"
+										fill="#ffffff"
+									/>
+								</svg>
+							</div>
 						</div>
 					</div>
 					<div class="recta-div">
@@ -64,15 +84,31 @@
 								<p>Total Losers</p>
 								<h2>200</h2>
 							</div>
+							<div class="arrow">
+								<svg
+									width="30"
+									height="30"
+									viewBox="0 0 18 18"
+									fill="none"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<path
+										opacity="0.4"
+										d="M8.99984 0.666494C13.5957 0.666494 17.3332 4.40483 17.3332 8.99983C17.3332 13.5948 13.5957 17.3332 8.99984 17.3332C4.40484 17.3332 0.666504 13.5948 0.666504 8.99983C0.666504 4.40483 4.40484 0.666494 8.99984 0.666494Z"
+										fill="#75759E"
+									/>
+									<path
+										d="M7.79782 5.48256C7.95699 5.48256 8.11699 5.5434 8.23865 5.66506L11.1445 8.55673C11.262 8.67423 11.3278 8.8334 11.3278 9.00006C11.3278 9.1659 11.262 9.32506 11.1445 9.44256L8.23865 12.3359C7.99449 12.5792 7.59949 12.5792 7.35532 12.3342C7.11199 12.0892 7.11282 11.6934 7.35699 11.4501L9.81782 9.00006L7.35699 6.55006C7.11282 6.30673 7.11199 5.91173 7.35532 5.66673C7.47699 5.5434 7.63782 5.48256 7.79782 5.48256Z"
+										fill="#ffffff"
+									/>
+								</svg>
+							</div>
 						</div>
 					</div>
 					<div class="second-rec">
-						<form>
-							<div class="text-wrapper">
+						<div class="input-div">
+							<div class="search_section">
 								<p>what are you looking for ?</p>
-								<p>Registration Date</p>
-							</div>
-							<div class="input-div">
 								<div class="search-div">
 									<img
 										class="search-img"
@@ -86,26 +122,33 @@
 										placeholder="Search..."
 									/>
 								</div>
-								<input
-									placeholder="From Date"
-									class="date"
-									type="text"
-									onfocus="(this.type='date')"
-									id="date"
-								/>
-								<input
-									placeholder="To Date "
-									class="date"
-									type="text"
-									onfocus="(this.type='date')"
-									id="date"
-								/>
+							</div>
+							<div class="date_section">
+								<p>Registration Date</p>
+								<div class="date_ctn">
+									<input
+										placeholder="From Date"
+										class="date"
+										type="text"
+										onfocus="(this.type='date')"
+										id="date"
+									/>
+									<input
+										placeholder="To Date "
+										class="date"
+										type="text"
+										onfocus="(this.type='date')"
+										id="date"
+									/>
+								</div>
+							</div>
+							<div class="input_btn">
 								<button class="refine-search">
 									Refine Search
 								</button>
 								<p class="clear">Clear Filters</p>
 							</div>
-						</form>
+						</div>
 					</div>
 					<div class="big-rec">
 						<table>
@@ -229,7 +272,7 @@
 							><li class="menu-items">Adverts</li></a
 						>
 						<a href="coinspricing.html"
-							><li class="menu-items">Coins Pricing </li></a
+							><li class="menu-items">Coins Pricing</li></a
 						>
 						<a href="accountsettings.html"
 							><li class="menu-items">Account Settings</li></a
