--- a/users.html
+++ b/users.html
@@ -40,15 +40,11 @@
 							
 						</div>
 					</div>
-					
 					</div>
 					<div class="second-rec">
-						<form>
-							<div class="text-wrapper">
+						<div class="input-div">
+							<div class="search_section">
 								<p>what are you looking for ?</p>
-								<p>Registration Date</p>
-							</div>
-							<div class="input-div">
 								<div class="search-div">
 									<img
 										class="search-img"
@@ -62,26 +58,33 @@
 										placeholder="Search..."
 									/>
 								</div>
-								<input
-									placeholder="From Date"
-									class="date"
-									type="text"
-									onfocus="(this.type='date')"
-									id="date"
-								/>
-								<input
-									placeholder="To Date "
-									class="date"
-									type="text"
-									onfocus="(this.type='date')"
-									id="date"
-								/>
+							</div>
+							<div class="date_section">
+								<p>Registration Date</p>
+								<div class="date_ctn">
+									<input
+										placeholder="From Date"
+										class="date"
+										type="text"
+										onfocus="(this.type='date')"
+										id="date"
+									/>
+									<input
+										placeholder="To Date "
+										class="date"
+										type="text"
+										onfocus="(this.type='date')"
+										id="date"
+									/>
+								</div>
+							</div>
+							<div class="input_btn">
 								<button class="refine-search">
 									Refine Search
 								</button>
 								<p class="clear">Clear Filters</p>
 							</div>
-						</form>
+						</div>
 					</div>
 					<div class="big-rec">
 						<table>
