mobile nav bar final

--- a/accountsettings.html
+++ b/accountsettings.html
@@ -19,10 +19,12 @@
 							<p>Hello, stella</p>
 							<img src="icons/image 1.svg" />
 							<img
-								onclick="openNav()"
+							
 								src="icons/Arrow - Down 2.svg"
 							/>
 						</div>
+						<img onclick="menutoogle()"
+							class="menu-icon" src="icons/menu icon.png" />
 					</div>
 				</div>
 				<div class="inner-ctn">
@@ -85,6 +87,21 @@
 				</div>
 			</div>
 		</div>
+  <div href="javascript:void(0)" id="mySidenav" class="sidebar-bg" onclick="closeNav()">
+					<div class="sidenav-2">
+					 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><img
+						class="close"
+						src="icons/Collapse.svg"
+					/><p class="back-white">Close</p></a>
+					<ul>
+ 						<a href="/"><li class="sec-">Dashboard</li></a>
+  						<a href="contest.html"><li class="sec-">Contest</li></a>
+ 						 <a href="users.html"><li class="sec-">Users</li></a>
+  						<a href="Adverts.html"><li class="sec-">Adverts</li></a>
+							<a href="coinspricing.html"><li class="sec-">Coins Pricing</li></a>
+						<a href="accountsettings.html"><li class="sec-">Account Settings</li></a>
+					</ul>
+				</div>
 		<script src="accountsettings.js"></script>
 	</body>
 </html>
