table margins issue solved

--- a/accountsettings.html
+++ b/accountsettings.html
@@ -58,7 +58,7 @@
 							</div>
 						</div>
 						<div class="sav-ctn">
-							<button class="save">Save Changes</button>
+							<button class="save" onclick="return Validate()" >Save Changes</button>
 						</div>
 						</form>
 					</div>
