--- a/index.html
+++ b/index.html
@@ -293,8 +293,10 @@
 						<a href="accountsettings.html"><li class="sec-">Account Settings</li></a>
 					</ul>
 				</div>
+  </div>
 
 		<!-- </div> -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/gsap.min.js"></script>
 		<script src="script.js"></script>
 	</body>
 </html>
