animations for the page navs

--- a/adverts.html
+++ b/adverts.html
@@ -240,6 +240,7 @@
 						<a href="accountsettings.html"><li class="sec-">Account Settings</li></a>
 					</ul>
 				</div>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/gsap.min.js"></script>
 		<script src="adverts.js"></script>
 	</body>
 </html>
