--- a/coinspricing.html
+++ b/coinspricing.html
@@ -265,6 +265,7 @@
 					>
 				</ul>
 			</div>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/gsap.min.js"></script>
 		
 		<script src="coinspricing.js"></script>
 	</body>
