--- a/dashboard2.html
+++ b/dashboard2.html
@@ -184,6 +184,8 @@
 					</ul>
 				</div>
         </div>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/gsap.min.js"></script>
+
         <script src="dashboard2.js"></script>
 </body>
 </html>
