--- a/users.html
+++ b/users.html
@@ -225,6 +225,7 @@
 						<a href="accountsettings.html"><li class="sec-">Account Settings</li></a>
 					</ul>
 				</div>
+				<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/gsap.min.js"></script>
 				<script src="users.js"></script>
 </body>
 </html>
