--- a/accountsettings.html
+++ b/accountsettings.html
@@ -102,6 +102,8 @@
 						<a href="accountsettings.html"><li class="sec-">Account Settings</li></a>
 					</ul>
 				</div>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/gsap.min.js"></script>
+
 		<script src="accountsettings.js"></script>
 	</body>
 </html>
