--- a/contest.html
+++ b/contest.html
@@ -348,6 +348,8 @@
 						<a href="accountsettings.html"><li class="sec-">Account Settings</li></a>
 					</ul>
 				</div>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/gsap.min.js"></script>
+
 		<script src="contest.js"></script>
 	</body>
 </html>
